--- a/client/src/App.css
+++ b/client/src/App.css
@@ -575,3 +575,13 @@ button {
     padding: 0.3rem 0.4rem;
   }
 }
+
+.ui.avatar.image,
+.ui.avatar.image img,
+.ui.avatar.image svg,
+.ui.avatar.images .image,
+.ui.avatar.images img,
+.ui.avatar.images svg {
+  width: 3rem;
+  height: 3rem;
+}
